--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,13 @@
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 64px;
+    padding: 24px 64px;
+    border-bottom: 1px solid var(--color-badges, #F2F4F7);
+    background: var(--color-inputs, #F7F7F7);
 
 }
 
 .link {
-    padding-block: 24px;
     text-decoration: none;
 }
 
