--- a/src/components/CamperDetails/CamperCard.module.css
+++ b/src/components/CamperDetails/CamperCard.module.css
@@ -20,14 +20,16 @@
     width: 524px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 24px;
+    justify-content: space-between;
     flex-shrink: 0;
 
 }
 
 .cardHeader {
     display: flex;
+    width: 524px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .cardTitle {
@@ -44,6 +46,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: 1.3; /* 133.333% */
+
 }
 
 .likeButton {
@@ -90,7 +93,8 @@
 }
 
 .location {
-
+    display: flex;
+    gap: 4px;
 }
 
 .cardDesc {
