--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -2,10 +2,16 @@
     padding: 48px 64px;
     display: grid;
     grid-template-columns: 30% 1fr;
+    height: calc(200vh - 96px);
+    overflow: hidden;
 }
 
 .sidebar {
     grid-column: 1;
+    position: sticky;
+    top: 0;
+    height: fit-content;
+    overflow-y: auto;
 }
 
 .catalogContainer {
@@ -14,5 +20,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    overflow-y: auto; /* скролл только для каталога */
+    height: 100%;
 }
