--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,10 @@ textarea:focus:not(:focus-visible) {
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
