--- a/src/components/CamperDetails/CamperDetails.module.css
+++ b/src/components/CamperDetails/CamperDetails.module.css
@@ -122,7 +122,8 @@
         grid-area: gallery;
         display: flex;
         align-items: flex-start;
-        gap: 75px;
+        gap: 25px;
+        justify-content: flex-start;
     }
 
     .image {
