--- a/src/components/CamperForm/CamperForm.module.css
+++ b/src/components/CamperForm/CamperForm.module.css
@@ -1,14 +1,16 @@
 .formContainer {
     padding: 44px;
     border-radius: 10px;
-    border: 1px solid var(--color-gray);
+    border: 1px solid var(--color-gray-light);
+    width: 640px;
+    height: 100%;
 }
 
 .formCard {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    width: 527px;
+    height: 100%;
 }
 
 .formHeader {
@@ -30,21 +32,50 @@
 .form {
     display: flex;
     flex-direction: column;
-    gap: 14px;
+    align-items: center;
+    flex: 1;
+    justify-content: space-between;
 }
 
+.formFields {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    width: 100%;
+}
+
+
 .formInput {
+    width: 100%;
     height: 60px;
     padding: 18px;
+    border: 1px solid var(--color-gray-light);
+    border-radius: 10px;
+    outline: none;
+}
+
+.formInput:focus {
+    border-color: var(--color-gray);
 }
 
 .formTextarea {
+    width: 100%;
     height: 118px;
     resize: none;
     padding: 18px;
+    border: 1px solid var(--color-gray-light);
+    border-radius: 10px;
+    outline: none;
+}
+
+.formTextarea:focus {
+    border-color: var(--color-gray);
 }
 
 .error {
     color: red;
 }
 
+.button {
+    margin-top: auto;
+}
