--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,6 +5,9 @@
     border-bottom: 1px solid var(--color-gray-light, #F2F4F7);
     background: var(--color-inputs, #F7F7F7);
 
+    position: sticky;
+    top: -1px;
+
 }
 
 .link {
