--- a/src/components/CatalogFilter/CatalogFilter.module.css
+++ b/src/components/CatalogFilter/CatalogFilter.module.css
@@ -1,3 +1,67 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
 
+.badges {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: space-between;
+    row-gap: 8px;
+}
+
+.badge {
+    padding-block: 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    flex-direction: column;
+    cursor: pointer;
+    min-width: 112px;
+    text-transform: capitalize;
+}
+
+.badge:hover {
+    border: 1px solid var(--color-gray-light);
+    border-radius: 10px;
+}
+
+.icon {
+    width: 32px;
+    height: 32px;
+}
+
+.label {
+    color: var(--color-text, #475467);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5; /* 150% */
+}
+
+.filterType {
+    position: relative;
+
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 120% */
+}
+
+.filterType::after {
+    content: '';
+    position: absolute;
+    bottom: -24px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgba(16, 24, 40, 0.1);
+}
+
+.filterContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
 }
