--- a/src/components/Location/Location.module.css
+++ b/src/components/Location/Location.module.css
@@ -1,3 +1,15 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 
+.label {
+    color: var(--color-gray, #6C717B);
+}
+
+.location {
+    padding: 18px 20px;
+    display: flex;
+    gap: 8px;
 }
