--- a/src/components/CamperDetails/CamperDetails.module.css
+++ b/src/components/CamperDetails/CamperDetails.module.css
@@ -2,7 +2,6 @@
     display: flex;
     gap: 24px;
     padding: 24px;
-
     border-radius: 20px;
     border: 1px solid var(--color-gray-light, #DADDE1);
 
@@ -28,6 +27,8 @@
         display: flex;
         width: 524px;
         justify-content: space-between;
+        flex-wrap: wrap;
+        row-gap: 5px;
         align-items: center;
     }
 
@@ -55,14 +56,19 @@
     .iconLike {
         width: 26px;
         height: 24px;
-        color: red; /* обводка */
-        fill: blue; /* заливка */
+        color: transparent; /* обводка */
+        fill: var(--color-gray); /* заливка */
     }
 
-    .iconLike.filled {
-        color: yellow; /* цвет когда лайкнуто */
-        fill: yellow; /* если нужно залить */
+    .iconLike:hover {
+        fill: var(--color-button);
     }
+
+    .iconLike.liked {
+        fill: var(--color-button-hover);
+    }
+
+
 
     .iconStar {
 
