--- a/src/components/Location/Location.module.css
+++ b/src/components/Location/Location.module.css
@@ -13,3 +13,16 @@
     display: flex;
     gap: 8px;
 }
+
+.select {
+    border: none;
+    outline: none;
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.select:focus {
+    outline: none;
+}
