--- a/src/components/CatalogFilter/CatalogFilter.module.css
+++ b/src/components/CatalogFilter/CatalogFilter.module.css
@@ -15,14 +15,22 @@
 .badge {
     padding-block: 16px;
     display: flex;
-    align-items: center;
     gap: 8px;
     flex-direction: column;
     cursor: pointer;
     min-width: 112px;
-    text-transform: capitalize;
+
     border: 1px solid transparent;
     border-radius: 10px;
+}
+
+.badgeButton {
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
 }
 
 .badge:hover {
