--- a/src/pages/FavouritesPage/FavouritesPage.module.css
+++ b/src/pages/FavouritesPage/FavouritesPage.module.css
@@ -2,4 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 48px 64px;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
