fix fetchingById error

--- a/src/components/CamperDetails/CamperDetails.module.css
+++ b/src/components/CamperDetails/CamperDetails.module.css
@@ -187,3 +187,12 @@
     gap: 4px;
 
 }
+
+.notFound {
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+}
