--- a/src/UI/Loader/Loader.module.css
+++ b/src/UI/Loader/Loader.module.css
@@ -9,7 +9,7 @@
     width: 40px;
     height: 40px;
     border: 2px solid #f3f3f3;
-    border-top: 4px solid var(--color-button);
+    border-top: 4px solid var(--color-accent);
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
