--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
 }
 
 @layer components {
+    .myContainer {
+        @apply px-2 md:px-4 lg:px-6 xl:px-8 max-w-[1920px] mx-auto
+    }
+
     .interactive,
     .interactive-button {
         @apply transition transform cursor-pointer
@@ -28,6 +32,7 @@
 }
 
 body {
+    min-height: 100vh;
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -35,4 +40,6 @@ body {
     line-height: 1.5;
     color: var(--color-text);
 }
+
+
 
